Commit the current state of the repository to ensure a starting point for further changes.
Signed-off-by: Bartłomiej Kuras <hash.deb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="cv-entry">
             <div class="title">
               <div>
-                <span class="position">Head of Engineering</span> @ <a href="https://philabs.xyz">Confio GmbH</a>
+                <span class="position">Head of Engineering</span> @ <a href="https://philabs.xyz">Philabs LTD</a>
               </div>
               <div class="dates">2025</div>
             </div>
@@ -71,32 +71,20 @@
           <div class="cv-entry">
             <div class="title">
               <div>
-                <span class="position">Engineering
-                  Manager</span> @ <a href="https://confio.gmbh">Confio
-                  GmbH</a>
+                <span class="position">Engineering Manager</span> @ <a href="https://confio.gmbh">Confio GmbH</a>
               </div>
               <div class="dates">2023 - 2025</div>
             </div>
-            <div class="summary">A role involving people management and product ownership
-              responsibilities. Here I learned how to work with people
-              on completely different level. I was not only involved in architectural decisions, but I was also responsible
-              for taking care of people. For the first time for long time I got completely new set of challanges, that
-              never concerned me as a Developer or even a leader. Still, as I grew here from the senior developer I conisder
-              leading by example a huge part of my contribution to this company.
-              My day-to-day work included:
+            <div class="summary">
+              In this role, I embraced the challenges of people management and product ownership with unwavering confidence and determination. I contributed to architectural decisions while taking full responsibility for the well-being and professional growth of my team members. Transitioning from a senior developer position, I made a significant impact through my leadership.
+              Key responsibilities include:
               <ul>
-                <li>Leading a team of 7 Software Developers, encouraging high coding standards.</li>
-                <li>Full product ownership over supporting <i>CosmWasm</i> libraries, including
-                  <i><a href="https://docs.rs/cw-multi-test/latest/cw_multi_test/">cw-multi-test</a></i>,
-                  <i><a href="https://docs.rs/sylvia/latest/sylvia/">sylvia</a></i>,
-                  <i><a href="https://docs.rs/storey/latest/storey/">storey</a></i>.
-                </li>
-                <li>Process management, including redefining recruitment and onboarding processes for technical
-                  employees.
-                </li>
-                <li>Communication with existing and potential clients, including work reporting.</li>
-                <li>People management, focused on keeping up people's morale, and cleaning up obstacles.</li>
-                <li>Involved in staffing decisions.</li>
+                <li><strong>Team Leadership:</strong> Directed a team of 7 developers, fostering collaboration and maintaining impeccable coding standards.</li>
+                <li><strong>Product Ownership:</strong> Held comprehensive ownership of <i>CosmWasm</i> libraries, including <i><a href="https://docs.rs/cw-multi-test/latest/cw_multi_test/">cw-multi-test</a></i> and <i><a href="https://docs.rs/sylvia/latest/sylvia/">Sylvia Framework</a></i>.</li>
+                <li><strong>Recruitment and Onboarding:</strong> Revamped recruitment and onboarding processes, ensuring seamless integration for new employees.</li>
+                <li><strong>Client Relationships:</strong> Built and nurtured strong client relationships through effective communication and detailed reporting.</li>
+                <li><strong>People Management:</strong> Focused on boosting team morale and clearing obstacles to enhance productivity.</li>
+                <li><strong>Strategic Staffing:</strong> Played a critical role in making informed staffing decisions that aligned with organizational goals.</li>
               </ul>
             </div>
           </div>
@@ -105,23 +93,16 @@
         <div class="cv-box">
           <div class="cv-entry">
             <div class="title">
-              <div><span class="position">Rust Smart Contract Developer</span> @ <a href="https://confio.gmbh">Confio
-                  GmbH</a></div>
+              <div><span class="position">Rust Smart Contract Developer</span> @ <a href="https://confio.gmbh">Confio GmbH</a></div>
               <div class="dates">2021 – 2023</div>
             </div>
-            <div class="summary">I started in Confio as a Rust developer, focusing on smart contracts. Later as, part of
-              this role, I moved towards development and maintenance
-              libraries supporting building smart contracts with <i>CosmWasm</i>. 
-              In this position:
+            <div class="summary">
+              As a Rust Smart Contract Developer at Confio, I specialized in blockchain technology and contributed significantly to the <i>CosmWasm</i> ecosystem. My role involved innovation, development, and education within the blockchain domain.
               <ul>
-                <li>I worked on smart contracts for <i>TGrade</i> core.</li>
-                <li>I was involved in the development of <i>Mesh Security</i>.</li>
-                <li>I proposed, designed, and pushed <i>Sylvia Framework</i> to the main product line.</li>
-                <li>I developed and maintained supporting CosmWasm libraries, mostly the
-                  <i><a href="https://docs.rs/cw-multi-test/latest/cw_multi_test/">cw-multi-test</a></i> crate.
-                </li>
-                <li>I started <i>CosmWasm Academy</i>, recorded and published courses about building smart contracts
-                  with <i>CosmWasm</i>.</li>
+                <li><strong>Smart Contract Development:</strong> Developed robust smart contracts for <i>TGrade</i> core and collaborated on the <i>Mesh Security</i> initiative.</li>
+                <li><strong>Framework Innovation:</strong> Conceptualized, designed, and integrated the <i>Sylvia Framework</i> into the main product line, enhancing the development process.</li>
+                <li><strong>Library Maintenance:</strong> Maintained and improved <i>CosmWasm</i> libraries, notably the <i><a href="https://docs.rs/cw-multi-test/latest/cw_multi_test/">cw-multi-test</a></i> crate.</li>
+                <li><strong>Educational Outreach:</strong> Founded the <i>CosmWasm Academy</i>, providing courses and resources to educate developers on building blockchain solutions.</li>
               </ul>
             </div>
           </div>
@@ -130,22 +111,19 @@
         <div class="cv-box">
           <div class="cv-entry">
             <div class="title">
-              <div><span class="position">Co-organizer</span> @ <a href="https://www.rust-wroclaw.pl/">Rust Wroclaw</a>
-              </div>
+              <div><span class="position">Co-organizer</span> @ <a href="https://www.rust-wroclaw.pl/">Rust Wroclaw</a></div>
               <div class="dates">2018 - present</div>
             </div>
-            <div class="summary">I was co-organizing the <i>Rust Wrocław
-                Meetup</i> - local Rust community gatherings with experience sharing and networking. There is no so much
-                happening with this anymore, however around 2019-2023 when I was highly actievely organizing Meetups, we
-                were running the 2-talks evening every month, being the stronges Rust community in Poland. My role involves:
+            <div class="summary">
+              I have been an active co-organizer of the <i>Rust Wrocław Meetup</i>, a the local Rust community meeting to share knowledge and network. From 2019 to 2023, I played a key role in making it the strongest Rust community in Poland by co-organizing monthly events featuring two talks per evening. My contributions include:
               <ul>
-                <li>Organizing speakers and setting up Meetups lineup.</li>
-                <li>Organizing places to meet, looking for cooperation.</li>
-                <li>Speaking myself on the Meetup regularly.</li>
-                <li>Make sure the domain is alive, Meetup is there, and Slack is working.</li>
-                <li>Co-organizing the online Rusty Days conference.</li>
+                <li><strong>Speaker Coordination:</strong> Identified and organized speakers to ensure engaging and insightful Meetup lineups.</li>
+                <li><strong>Venue Management:</strong> Secured venues and fostered partnerships to facilitate seamless events.</li>
+                <li><strong>Public Speaking:</strong> Regularly delivered talks to share my insights and expertise with the community.</li>
+                <li><strong>Community Infrastructure:</strong> Ensured the domain, Meetup page, and Slack channels remained operational.</li>
+                <li><strong>Conference Organization:</strong> Co-organized the online Rusty Days conference to extend the community's reach.</li>
               </ul>
-                My work around the Rust Meetup is pro bono.
+              My involvement in the Rust Meetup has been entirely pro bono, driven by a deep passion for the Rust language and its community.
             </div>
           </div>
         </div>
@@ -158,17 +136,13 @@
               <div><span class="position">Rust Trainer</span> @ <a href="https://sii.pl">Sii</a></div>
               <div class="dates">2021</div>
             </div>
-            <div class="summary">I prepared a 2-day <i>Rust</i> training for developers with <i>C++</i> and
-              <i>Python</i> backgrounds and executed it twice. I received strongly positive feedback. The training was
-              focused on: <ul>
-                <li>Building fundamentals on <i>Rust</i> basic syntax based on trainees' prior experience.</li>
-                <li>Ensuring trainees understand how familiar concepts differ from those in other
-                  stacks.</li>
-                <li>Providing basic but solid intuition on the <i>Rust</i> novelties: <i>borrow checker</i>,
-                  <i>traits</i>, and <i>enums</i> as algebraic types.
-                </li>
-                <li>Practical workshop-style teaching showcasing concepts on real code and contesting trainees with
-                  further exercises.</li>
+            <div class="summary">
+              At Sii, I had the opportunity to design and deliver a comprehensive 2-day <i>Rust</i> training program tailored for developers with <i>C++</i> and <i>Python</i> backgrounds. This program received overwhelmingly positive feedback and focused on:
+              <ul>
+                <li><strong>Foundation Building:</strong> Introducing <i>Rust</i> basic syntax and concepts while leveraging the trainees' existing knowledge.</li>
+                <li><strong>Conceptual Clarity:</strong> Highlighting differences between familiar programming paradigms and <i>Rust</i>'s unique approach.</li>
+                <li><strong>Rust Innovations:</strong> Providing a deep understanding of key features such as the <i>borrow checker</i>, <i>traits</i>, and <i>enums</i> as algebraic types.</li>
+                <li><strong>Hands-On Learning:</strong> Conducting practical workshops with real-world examples and engaging exercises to reinforce learning.</li>
               </ul>
             </div>
           </div>
@@ -181,17 +155,14 @@
               <div class="dates">2020 - 2021</div>
             </div>
             <div class="summary">
-              GPW was rather short episode in my career, I was working there on the Wats stock exchange system that
-              was supposed to replace the system GPW - polish national currency exchange system - was using. As a
-              stock exchange, the application was supposed mostly to maintain the offer book and match transactions
-              on it. While a system at the glance is simply, the huge part of it is how much it relies on safety and
-              performance. Currency exchange is dealing with huge money, and any funtionality bugs could compromize
-              high currency volumes. On the other hand it has to be blazingly fast - in the HFT trading world, the
-              winner on the CEX is often the one with the shortes fiber, and the system has to be prepared for such load.
-              In the project I had to utilize all my knowledge about performance on many levels. This is also a place where
-              I actually had to work with justified unsafe code, so understanding the soundness of unsafe Rust layers was
-              critical.
-            </div> 
+              My time at GPW, though brief, was marked by significant contributions to the Wats stock exchange system, which was designed to replace Poland's national currency exchange system. This mission-critical application was tasked with maintaining the order book and matching transactions. While the system appeared simple at a glance, its true challenge lay in ensuring both safety and performance under high-pressure conditions. Highlights of my work include:
+              <ul>
+                <li><strong>Performance Optimization:</strong> Leveraged my deep understanding of low-level performance to optimize system operations.</li>
+                <li><strong>Safety Assurance:</strong> Addressed the criticality of reliability and correctness in financial systems handling vast volumes of transactions.</li>
+                <li><strong>Advanced Rust Usage:</strong> Effectively utilized justified unsafe code to meet stringent performance requirements while maintaining soundness.</li>
+                <li><strong>High-Frequency Trading Preparedness:</strong> Ensured system readiness to handle the demands of HFT trading, where millisecond-level advantages are pivotal.</li>
+              </ul>
+            </div>
           </div>
         </div>
 
