Enhance various sections for professional tone, grammar, and formatting improvements: Nokia, DeLaval, Imagination Technologies, Credit Suisse, Luxoft, Anixe, and more.
Signed-off-by: Bartłomiej Kuras <hash.deb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -169,18 +169,18 @@
         <div class="cv-box">
           <div class="cv-entry">
             <div class="title">
-              <div><span class="position">Rust Developer and Trainer</span> @ <a
-                  href="https://www.luxoft.com/">Luxoft</a>
+              <div><span class="position">Rust Developer and Trainer</span> @ <a href="https://www.luxoft.com/">Luxoft</a>
               </div>
               <div class="dates">2020</div>
             </div>
             <div class="summary">
-              I was hired by Luxoft for a specific task - to take care of the <i>Rust</i> knowledge in the team. The
-              project implementing <i>5g core</i> in Rust was carried over from the client's in-house team. Initially, Luxoft
-              was responsible for the small <i>C++</i> part, and my role was to ensure the team was also ready to take over
-              the <i>Rust</i> components. In the project, I was involved in day-to-day development. On top of that, I ran
-              weekly/bi-weekly presentations and did one-to-one coaching, pair programming, and in-depth code review. I
-              also took care of the overall Rust code quality. I was involved in recruiting new Rustaceans to the team.
+              At Luxoft, I was tasked with advancing the team's <i>Rust</i> expertise as part of a project involving the implementation of a <i>5G core</i>. Initially, Luxoft was responsible for a small <i>C++</i> component, while the client's team managed the <i>Rust</i> segments. My role was pivotal in ensuring the technical readiness of our team to take over the <i>Rust</i> components while maintaining high-quality standards.
+              <ul>
+                <li><strong>Team Enablement:</strong> Delivered weekly/bi-weekly technical sessions, one-on-one mentorship, and established pair programming practices.</li>
+                <li><strong>Code Quality Assurance:</strong> Advocated for high standards of <i>Rust</i> coding practices to ensure highly maintainable solutions.</li>
+                <li><strong>Recruitment:</strong> Played a key role in recruiting and seamlessly onboarding new Rust developers.</li>
+                <li><strong>Active Development:</strong> Participated in day-to-day development, focusing on delivering efficient and reliable solutions for the <i>5G core</i>.</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -188,18 +188,16 @@
         <div class="cv-box">
           <div class="cv-entry">
             <div class="title">
-              <div><span class="position">Rust Developer</span> @ <a href="https://www.anixe.pl/">Anixe</a>
-              </div>
+              <div><span class="position">Rust Developer</span> @ <a href="https://www.anixe.pl/">Anixe</a></div>
               <div class="dates">2018 - 2019</div>
             </div>
             <div class="summary">
-              In Anixe I was working on the searching engine for hotels booking system. The product was about managing
-              the system knowledge about hotels offer, and unifying it to then find the best stay for the given conditions.
-              The challange was that hotels uses different way to define their prices, and we had to define the flexible
-              system. On top of that, system had to be performant - hardware running the search engine was limited, so
-              it needed to leverage the Rust high performance premise to keep the high throughput.
-              All my work was around backend Rust development, with high autonomy. Most of the time me and the team lead
-              was the only two people taking care of this particular product part.
+              At Anixe, I focused on backend Rust development for a hotel booking system's search engine. The product aimed to manage and unify hotel offers to help users find the best stay based on their requirements.
+              <ul>
+                <li><strong>Flexible Pricing System:</strong> Developed a system to handle diverse hotel pricing structures, ensuring adaptability and accuracy.</li>
+                <li><strong>Performance Optimization:</strong> Leveraged Rust's high-performance capabilities to maintain optimal throughput on limited hardware resources.</li>
+                <li><strong>Autonomous Development:</strong> Operated with high autonomy alongside the team lead.</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -207,22 +205,15 @@
         <div class="cv-box">
           <div class="cv-entry">
             <div class="title">
-              <div><span class="position">C++/Python Developer</span> @ <a
-                  href="https://www.credit-suisse.com/pl/pl.html">Credit Suisse</a>
-              </div>
+              <div><span class="position">C++/Python Developer</span> @ <a href="https://www.credit-suisse.com/pl/pl.html">Credit Suisse</a></div>
               <div class="dates">2016 - 2018</div>
             </div>
             <div class="summary">
-              Credit Suisse was one of the most interersting steps in my career. I was involved in the product that was
-              full rewrite of the credit-rist estimation engine. The product was supposed to analyze transactions
-              on the stock that happened particular day, to build base for predicting the risk of future transactions.
-              One of the most important requirements for the product was the high performance - the number of transactions
-              to analyze was overwhelming, and the goal was to get all of calculation done by the next trading day start.
-              However calculation correctness was not less important - the outcome was not only strongly affecting the
-              further Quants efficiency, but also the way of the credit risk measurement is strongly controlled by
-              goverments, so correctess of the implementation was relevant from legal standpoint. Finally the product stability
-              was also key. As the calculations had to be correct and fast any stability bugs could highly affect the outcome value
-              by delying it, or excluding some batch of trades from calculations.
+              Credit Suisse provided one of the most impactful experiences of my career. I was involved in the complete rewrite of the credit risk estimation engine. This product analyzed stock transactions for a given day to build a foundation for predicting future transaction risks.
+              <ul>
+                <li><strong>High-Performance Computing:</strong> Designed solutions to handle overwhelming transaction volumes, ensuring calculations were completed before the start of the next trading day.</li>
+                <li><strong>Accuracy and Compliance:</strong> Developed legally compliant, precise implementations that significantly influenced quants' efficiency and adhered to government regulations on credit risk measurement.</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -230,19 +221,15 @@
         <div class="cv-box">
           <div class="cv-entry">
             <div class="title">
-              <div><span class="position">C++ Developer</span> @ <a href="https://www.imaginationtech.com/">Imaginations
-                  Technologies</a>
-              </div>
+              <div><span class="position">C++ Developer</span> @ <a href="https://www.imaginationtech.com/">Imagination Technologies</a></div>
               <div class="dates">2015 - 2016</div>
             </div>
             <div class="summary">
-              In Imagination Technologies I was working on the GPU simulator. It was multipurpose software allowing to
-              test planned changes in GPU or test drivers without involving the hardware on its own. The implementation
-              was done in very low level C++ dialect that was somewhat closer to working with C, to avoid any overhead,
-              keeping simulation close to realtime. The simulator was written using SystemC library being sort of a
-              midpoint between VHDL hardware description and the hardware prototype. Also in this project I had unique
-              opportunity working with Perforce version control giving me POV of working with less common version controll
-              learning different team workflows.
+              At Imagination Technologies, I contributed to the development of a GPU simulator used for testing planned hardware changes and drivers without the need for physical hardware. The simulator was implemented in a low-level C++ dialect close to C to minimize overhead and maintain real-time performance. Key experience I gathered there include:
+              <ul>
+                <li><strong>SystemC Library:</strong> Developing using the SystemC library tought me to thing very closely to the hardware.</li>
+                <li><strong>Unusual Version Control:</strong> Gained experience with Perforce, enhancing my understanding of diverse version control workflows.</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -250,46 +237,35 @@
         <div class="cv-box">
           <div class="cv-entry">
             <div class="title">
-              <div><span class="position">C++ Developer</span> @ <a href="https://www.delaval.com">DeLaval</a>
-              </div>
+              <div><span class="position">C++ Developer</span> @ <a href="https://www.delaval.com">DeLaval</a></div>
               <div class="dates">2014 - 2015</div>
             </div>
             <div class="summary">
-              DeLaval is more a hardware company owning majority of milk-farming market with a very small Software
-              Development department I was a part of. The products of DeLaval are targetted towards milking farms,
-              and they include moslty hardware around that - automated solutions for Cows feeding, health maintenance,
-              milking, but also - keeping them happy! My role in DeLaval was revolving around one of such problems -
-              the prototype of rotary carousel milking cows continously. Here I was working across different stack levels.
-              I had to learn how to program simple PLCs making sure that when product mallfunctions, the operator or animal
-              doesn't get hurt. Also I was working on drivers maintaining the communication with basic hardware - ensuring
-              proper rotary speed, detaching milking station when needed, and on higher level instrumenting entire process.
-              Also the product was used by the human operator, so there was also communication with our UI application was
-              a part of the solution. Also in this company for the first time I had some impact on decision making. Regardless
-              of being rather mid-level developer, I quickly proven my engagement and analitical thinking and our architect was
-              often keen to know my opinion to take it in consideration and even if not use it as a whole - use as a base
-              for the solution he later refined.
+              DeLaval, a leading hardware company in the milk-farming industry, provided me with a unique opportunity to work on a prototype rotary carousel for continuous cow milking. This experience involved working across various stack levels:
+              <ul>
+                <li><strong>PLC Programming:</strong> Programmed simple PLCs to handle malfunctions and ensure safety during operation.</li>
+                <li><strong>Driver Development:</strong> Developed drivers to maintain communication with hardware, control rotary speeds, detach milking stations, and manage processes at higher levels.</li>
+                <li><strong>UI Integration:</strong> Enabled seamless communication with the UI application for efficient human operator interactions.</li>
+                <li><strong>Decision-Making Impact:</strong> Gained recognition for analytical thinking and contributed to architectural decisions, influencing solutions that were later refined by the architect.</li>
+              </ul>
             </div>
           </div>
         </div>
 
-
         <div class="cv-box">
           <div class="cv-entry">
             <div class="title">
-              <div><span class="position">C++ Developer</span> @ <a href="https://www.nokia.com/">Nokia</a>
-              </div>
+              <div><span class="position">C++ Developer</span> @ <a href="https://www.nokia.com/">Nokia</a></div>
               <div class="dates">2012 - 2014</div>
             </div>
             <div class="summary">
-              My career starter, Nokia was a place where I learned how Software is built. Started as a working student,
-              left the company as a solid mid developer. I was working mostly in OAM - operational and maintenance
-              component which was basicaly high level OS operating the BTS module. On one hand it was communicating
-              with hardware - antena line devices, radio devices, on the other with the network management system,
-              all of that maintaining the fault recovery with proper fault management and logging. My role there
-              was mostly simply writting code to the provided spec and debugging the system to fix issues reported but
-              BTS operators. Here I not only develop the strong function for my Software Developmnet knowledge including
-              C++ stack understanding and learning common tools and patterns, but what is equally important, here is
-              where I learnt to work with another people on the single codebase.
+              Nokia marked the beginning of my professional software development journey. Starting as a working student, I progressed to a mid-level developer role, gaining invaluable experience in collaborative software development and problem-solving in a large, complex codebase. My work primarily focused on the OAM (Operational and Maintenance) component of the Base Transceiver Station (BTS), a high-level operating system that manages fault recovery, logging, and communication between hardware and network management systems.
+              <ul>
+                <li><strong>Hands-On Development:</strong> Wrote and debugged code based on provided specifications to address issues reported by BTS operators.</li>
+                <li><strong>Hardware and Network Integration:</strong> Ensured seamless communication between antenna line devices, radio devices, and network management systems.</li>
+                <li><strong>Collaboration:</strong> Developed strong teamwork skills while working with diverse professionals on a shared codebase.</li>
+                <li><strong>Technical Growth:</strong> Honed my understanding of the C++ stack, common tools, and patterns, laying a solid foundation for future roles.</li>
+              </ul>
             </div>
           </div>
         </div>
