fix: missing opening tag

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </div>
 
-
+        <div class="cv-box">
           <div class="cv-entry">
             <div class="title">
               <div>
@@ -259,10 +259,9 @@
               <div class="dates">2012 - 2014</div>
             </div>
             <div class="summary">
-              Nokia marked the beginning of my professional software development journey. Starting as a working student, I progressed to a mid-level developer role, gaining invaluable experience in collaborative software development and problem-solving in a large, complex codebase. My work primarily focused on the OAM (Operational and Maintenance) component of the Base Transceiver Station (BTS), a high-level operating system that manages fault recovery, logging, and communication between hardware and network management systems.
+              Nokia marked the beginning of my professional software development journey. Starting as a working student, I progressed to a mid-level developer role, gaining invaluable experience in collaborative software development and problem-solving in a large, complex codebase. My work primarily focused on the OAM (Operational and Maintenance) component of the BTS, a high-level operating system that manages fault recovery, logging, and communication between hardware and network management systems.
               <ul>
                 <li><strong>Hands-On Development:</strong> Wrote and debugged code based on provided specifications to address issues reported by BTS operators.</li>
-                <li><strong>Hardware and Network Integration:</strong> Ensured seamless communication between antenna line devices, radio devices, and network management systems.</li>
                 <li><strong>Collaboration:</strong> Developed strong teamwork skills while working with diverse professionals on a shared codebase.</li>
                 <li><strong>Technical Growth:</strong> Honed my understanding of the C++ stack, common tools, and patterns, laying a solid foundation for future roles.</li>
               </ul>
