--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <ul>
             <li><span class="nf nf-fa-location_dot icon"></span>Wrocław (Poland)</li>
             <li><span class="nf nf-md-email_outline icon"></span><a
-                href="mailto:bartlomiej.kuras@o2.pl">bartlomiej.kuras@o2.pl</a>
+                href="mailto:bartlomiej@kuras.online">bartlomiej@kuras.online</a>
             </li>
             <li><span class="nf nf-cod-github icon"></span><a href="https://github.com/hashedone">/hashedone</a></li>
             <li><span class="nf nf-dev-linkedin icon"></span><a href="https://linkedin.com/in/hashedone">/hashedone</a>
