feat: improved summary

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Forum&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300..700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Forum&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://www.nerdfonts.com/assets/css/webfont.css" crossorigin>
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -33,9 +33,10 @@
           </ul>
 
           <div class="summary">
-            Technology-focused Rustacean with experience in telco, microservices, finance, and blockchain, interested in
-            AI
-            and programming languages.
+            <em>Software Engineer</em> with 15+ years of experience across <em>software development</em>,
+            <em>product ownership</em>, and <em>team leadership</em>. Skilled in <em>high-performance systems</em> and
+            <em>scalable architecture</em>. Experienced in managing 20+ person teams while staying
+            hands-on with code. Passionate about mentoring and knowledge sharing.
           </div>
 
         </div>
@@ -58,10 +59,10 @@
             <div class="summary">
               In this role, I took full responsibility for the technical aspects of the <a href="https://www.boltliquidity.io/">Bolt Liquidity</a> product. My contributions included designing the protocol and mathematical foundations, establishing development processes, and maintaining high standards. I led by example, actively participating in the development lifecycle.
               <ul>
+                <li><strong>Technical Contributions:</strong> Actively contributed to the codebase and conducted code reviews.</li>
                 <li><strong>Leadership:</strong> Directed a team of up to 5 developers, fostering a culture of excellence.</li>
                 <li><strong>Product Ownership:</strong> Defined product requirements and ensured team-wide understanding.</li>
                 <li><strong>Strategic Planning:</strong> Balanced development speed with long-term maintainability.</li>
-                <li><strong>Technical Contributions:</strong> Actively contributed to the codebase and conducted code reviews.</li>
               </ul>
             </div>
           </div>
